othographe et logo

--- a/aPropos.html
+++ b/aPropos.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
   <head>
@@ -19,7 +18,6 @@
 
   <body>
     <header data-theme="dark">
-
       <a class="navbar-brand" data-theme="dark" href="./index.html">
         <p1>Y D</p1>etailed <p1>F</p1>igures
       </a>
@@ -34,7 +32,7 @@
               >Accueil</a
             >
           </li>
-          
+
           <li class="nav-item">
             <a class="nav-link" data-theme="dark" href="./projets.html"
               >Projets</a
@@ -47,14 +45,13 @@
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" data-theme="dark" href="/modele3D.html"
-              >modèles 3D</a
+              >Modèles 3D</a
             >
           </li>
         </ul>
       </div>
     </header>
     <div class="global-container">
-      
       <div class="main-container">
         <div class="main">
           <h2 class="titre">Y Detailed Figures</h2>
@@ -64,11 +61,11 @@
               <span>O</span>bjectif <span>D</span>u <span>P</span>rojet
             </div>
             <p>
-              Y detailed figures consistera à realiser diversesfigurines en 3D à
-              partir de différents softwarespour ensuite réaliser une figurine
-              en 3D grâce auximprimantes du campus. Ensuite nos figurinesseront
-              commercialisables et pourront êtreachetées par les étudiants du
-              campus.
+              Y Detailed Figures est un projet consistant à réaliser diverses
+              figurines en 3D à partir de différents softwares. Permettant
+              ensuite d'imprimer la figurine en 3D grâce aux imprimantes
+              présentent au campus. Pour finalement etre revendu et racheté par
+              les étudiants du campus. campus.
             </p>
           </div>
           <div class="etapes">
@@ -116,7 +113,6 @@
                 alt="maraiche_charadesign"
                 class="logo"
               />
-
             </div>
             <div class="lineColumn">
               <img
@@ -169,11 +165,12 @@
             </div>
             <div class="lineCenter">
               <p class="description">
-                Marvelous permet de réaliser les vêtements de la figurine
+                Lychee Slicer 3 permet de convertir des modèles 3D en
+                instructions de mouvement précises pour l'impression 3D.
               </p>
               <img
-                src="./assets/images/logo-software/logo-marvelous.svg"
-                alt="Logo_Marvelous"
+                src="./assets/images/logo-software/logo-lycheeslicer3.png"
+                alt="Logo_lycheeSlicer3"
                 class="logo"
               />
             </div>
@@ -218,7 +215,7 @@
               <li>posing qui sera mis en avant pour la figurine</li>
               <li>
                 un léger mécanisme sera à réaliser style de la figurine:
-                cartoon, semis-réaliste ,réaliste.
+                cartoon, semis-réaliste, réaliste
               </li>
             </ul>
           </div>
@@ -233,7 +230,6 @@
             <p>Le temps d’impression dépend de la taille de la figurine</p>
           </div>
         </div>
-
       </div>
     </div>
     <script
