--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             <div class="projet-presentation sub-faction-container">
                 <h1>Le projet <br> Y Detailed Figures </h1>
                 <div class="presation-paragraph">
-                    <p>Le projet YDetailed Figure à été lancé en 2021 par un groupe de 7 étudiants. <br>
+                    <p>Le Projet Y Detailed Figures à été lancé en 2021 par un groupe de 7 étudiants. <br>
                         L'objectif du projet est de modéliser des figurines en 3D pour les imprimer grâce à une imprimante 3D <br>
-                        YDetailed Figure s'inscrit dans le cadre des projet Ydays. <br>
-                        Les étudiants ont donc le temps d'une année scolaire pour créer un concept art, le modélisé puis les imprimer.</p>
+                        Y Detailed Figures s'inscrit dans le cadre des projet Ydays. <br>
+                        Les étudiants ont donc le temps d'une année scolaire pour créer un concept art, le modéliser puis l'imprimer.</p>
                 </div>
                 <div>
                    <button class="lien-details projet" onclick="window.location.href = './aPropos.html'">
@@ -109,7 +109,7 @@
             </div> -->
 
         <div class="projet-modeles sub-faction-container">
-          <h1>Telecharger un modele</h1>
+          <h1>Télécharger un modèle</h1>
           <h3>(Prochainement)</h3>
           <div class="presation-paragraph">
             <!-- <p>
@@ -122,7 +122,7 @@
             <p> 
                 Les étudiants proposent en open source l'accès au fichier 3D de
               leurs figurines. <br />
-                Vous pourrez prochainement télecharger les modèles 3D afin de les modifer ou imprimer
+                Vous pourrez prochainement télécharger les modèles 3D afin de les modifer ou de les imprimer
             
             </p>
           </div>
