--- a/projets.html
+++ b/projets.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="favicon.ico" />
-    <title>Ydetailed figures</title>
+    <title>Y Detailed figures</title>
     <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="stylesheet" href="./styles/base.css" />
     <link rel="stylesheet" href="./styles/component/gridCard.css" />
@@ -30,6 +30,8 @@
               href="./index.html"
               >Accueil</a
             >
+          </li>
+
           <li class="nav-item">
             <a class="nav-link active" data-theme="dark" href="./projets.html"
               >Projets</a
@@ -42,14 +44,13 @@
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" data-theme="dark" href="/modele3D.html"
-              >modèles 3D</a
+              >Modèles 3D</a
             >
           </li>
         </ul>
       </div>
     </header>
     <div class="global-container" data-theme="dark">
-      
       <div class="main-container">
         <!-- #include virtual="../component/gridCard.html" -->
         <div class="main">
