--- a/index.html
+++ b/index.html
@@ -1,67 +1,104 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="utf-8">
-  <link rel="icon" href="favicon.ico" />
-  <title>Ydetailed figures</title>
-  <link rel="stylesheet" href="./styles/index.css">
-  <!-- <link rel="stylesheet" href="./styles/base.css"> -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.ico" />
+    <title>Ydetailed figures</title>
+    <link rel="stylesheet" href="./styles/index.css" />
+    <!-- <link rel="stylesheet" href="./styles/base.css"> -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+  </head>
 
   <body>
     <header>
-        <a class="navbar-brand" href="#">
-            Y detailed Figures
-        </a>
-        <div class = "nav-bar">
-            <ul class="nav justify-content-end">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Accueil</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./projets.html">Projets</a>
-                </li>
-                <li class="nav-item">
-                        <a class="nav-link" href="./aPropos.html">A propos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="./modele3D.html" >modèles 3D</a>
-                    </li>
-                </ul>
-            </div>
-     </header>
+      <a class="navbar-brand" href="#"> Y detailed Figures </a>
+      <div class="nav-bar">
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./projets.html">Projets</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./aPropos.html">A propos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="./modele3D.html">modèles 3D</a>
+          </li>
+        </ul>
+      </div>
+    </header>
     <div class="global-container">
-        <div class="main-container">
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="assets\images\caroussel\caroussel-conception2.jpg" class="d-block w-100 carousel" height="400" width="800" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="assets\images\caroussel\caroussel-modelisation2.jpg" class="d-block w-100 carousel" height="400" width="800"alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="assets\images\caroussel\caroussel-impression2.jpg" class="d-block w-100 carousel" height="400" width="800"alt="...">
-                  </div>
-                </div>
-              </div>
-            <div class="projet-presentation sub-faction-container">
-                <h1>Le projet <br> Y Detailed Figures </h1>
-                <div class="presation-paragraph">
-                    <p>Le Projet Y Detailed Figures à été lancé en 2021 par un groupe de 7 étudiants. <br>
-                        L'objectif du projet est de modéliser des figurines en 3D pour les imprimer grâce à une imprimante 3D <br>
-                        Y Detailed Figures s'inscrit dans le cadre des projet Ydays. <br>
-                        Les étudiants ont donc le temps d'une année scolaire pour créer un concept art, le modéliser puis l'imprimer.</p>
-                </div>
-                <div>
-                   <button class="lien-details projet" onclick="window.location.href = './aPropos.html'">
-                    En savoir plus sur le projet
-                </button>
-                </div>
+      <div class="main-container">
+        <div
+          id="carouselExampleSlidesOnly"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="assets\images\caroussel\caroussel-conception2.jpg"
+                class="d-block w-100 carousel"
+                height="400"
+                width="800"
+                alt="..."
+              />
             </div>
+            <div class="carousel-item">
+              <img
+                src="assets\images\caroussel\caroussel-modelisation2.jpg"
+                class="d-block w-100 carousel"
+                height="400"
+                width="800"
+                alt="..."
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets\images\caroussel\caroussel-impression2.jpg"
+                class="d-block w-100 carousel"
+                height="400"
+                width="800"
+                alt="..."
+              />
+            </div>
+          </div>
+        </div>
+        <div class="projet-presentation sub-faction-container">
+          <h1>
+            Le projet <br />
+            Y Detailed Figures
+          </h1>
+          <div class="presation-paragraph">
+            <p>
+              Le Projet Y Detailed Figures à été lancé en 2021 par un groupe de
+              7 étudiants. <br />
+              L'objectif du projet est de modéliser des figurines en 3D pour les
+              imprimer grâce à une imprimante 3D <br />
+              Y Detailed Figures s'inscrit dans le cadre des projet Ydays.
+              <br />
+              Les étudiants ont donc le temps d'une année scolaire pour créer un
+              concept art, le modéliser puis l'imprimer.
+            </p>
+          </div>
+          <div>
+            <button
+              class="lien-details projet"
+              onclick="window.location.href = './aPropos.html'"
+            >
+              En savoir plus sur le projet
+            </button>
+          </div>
+        </div>
 
-            <!-- <div class="projets lien-annees sub-faction-container">
+        <!-- <div class="projets lien-annees sub-faction-container">
                 <h1>Voir les realisations </h1>
                 <div class="container text-center">
                     <div class="row">
@@ -109,7 +146,7 @@
             </div> -->
 
         <div class="projet-modeles sub-faction-container">
-          <h1>Télécharger un modèle</h1>
+          <h1>Telecharger un modele</h1>
           <h3>(Prochainement)</h3>
           <div class="presation-paragraph">
             <!-- <p>
@@ -119,15 +156,19 @@
               l'imprimer. <br />
               Les fichier sont aux formats maya ou blender .
             </p> -->
-            <p> 
-                Les étudiants proposent en open source l'accès au fichier 3D de
+            <p>
+              Les étudiants proposent en open source l'accès au fichier 3D de
               leurs figurines. <br />
-                Vous pourrez prochainement télécharger les modèles 3D afin de les modifer ou de les imprimer
-            
+              Vous pourrez prochainement télécharger les modèles 3D afin de les
+              modifer ou de les imprimer
             </p>
           </div>
           <div>
-            <button class="lien-details modeles" href="./modele3D.html" disabled>
+            <button
+              class="lien-details modeles"
+              href="./modele3D.html"
+              disabled
+            >
               Voir les modèles de figurines disponibles
             </button>
           </div>
