--- a/index.html
+++ b/index.html
@@ -43,28 +43,22 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="assets\images\caroussel\caroussel-conception2.jpg"
+              src="assets\images\caroussel\carousel-conception.jpg"
               class="d-block w-100 carousel"
-              height="400"
-              width="800"
               alt="..."
             />
           </div>
           <div class="carousel-item">
             <img
-              src="assets\images\caroussel\caroussel-modelisation2.jpg"
+              src="assets\images\caroussel\carousel-modelisation.jpg"
               class="d-block w-100 carousel"
-              height="400"
-              width="800"
               alt="..."
             />
           </div>
           <div class="carousel-item">
             <img
-              src="assets\images\caroussel\caroussel-impression2.jpg"
+              src="assets\images\caroussel\carousel-impression2.png"
               class="d-block w-100 carousel"
-              height="400"
-              width="800"
               alt="..."
             />
           </div>
