--- a/projets.html
+++ b/projets.html
@@ -60,14 +60,18 @@
           </h3>
           <div class="choice">
             <button class="choix-affichage" id="show-Card">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50">
-                <path fill="currentColor" d="M3,3H9V9H3Zm10,0h6V9H13Zm-10,10H9v6H3Zm10,0h6v6H13Z"/>
-              </svg>
+              <img
+                src="/assets/images/icones/icone-grille.svg"
+                alt="Card"
+                width="50px"
+              />
             </button>
-            <button class="choix-affichage" id="show-List">   
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50">
-                <path fill="currentColor" d="M4,5h16v4H4V5z M4,13h16v4H4V13z M4,21h16v4H4V21z"/>
-              </svg>
+            <button class="choix-affichage" id="show-List">
+              <img
+                src="/assets/images/icones/icone-listes.svg"
+                alt="List"
+                width="50px"
+              />
             </button>
           </div>
           <div class="card-container" id="Card"></div>
