--- a/card.html
+++ b/card.html
@@ -3,11 +3,47 @@
   <head>
     <meta charset="utf-8" />
     <title>Détails de la carte</title>
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="./styles/base.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <h2 id="card-title"></h2>
-    <img id="card-image" src="" alt="Image de la carte" />
-    <p id="card-description"></p>
+    <header>
+      <a class="navbar-brand" href="./index.html">
+        <p1>Y D</p1>etailed <p1>F</p1>igures
+      </a>
+      <div class="nav-bar">
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="./index.html"
+              >Accueil</a
+            >
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link active" href="./projets.html">Projets</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./aPropos.html">A propos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="/modele3D.html">modèles 3D</a>
+          </li>
+        </ul>
+      </div>
+    </header>
+    <div class="global-container">
+      <div class="main-container">
+        <h2 id="card-title"></h2>
+        <img id="card-image" src="" alt="Image de la carte" />
+        <p id="card-description"></p>
+      </div>
+    </div>
 
     <script src="./assets/consts/constsFigurines.js"></script>
     <script>
