--- a/card.html
+++ b/card.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Détails de la carte</title>
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <title>Informations</title>
     <link rel="stylesheet" href="./styles/base.css" />
+    <link rel="stylesheet" href="./styles/card.css" />
+    <link rel="icon" href="./assets/images/logo-ydf/logo_orange_blanc.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,7 +25,6 @@
               >Accueil</a
             >
           </li>
-
           <li class="nav-item">
             <a class="nav-link active" href="./projets.html">Projets</a>
           </li>
@@ -39,9 +39,20 @@
     </header>
     <div class="global-container">
       <div class="main-container">
-        <h2 id="card-title"></h2>
-        <img id="card-image" src="" alt="Image de la carte" />
-        <p id="card-description"></p>
+        <div class="container">
+          <div class="description">
+            <h2 id="card-title"></h2>
+            <p id="card-brief"></p>
+            <h5 id="card-description"></h5>
+            <div class="artiste">
+              <h3>Artiste</h3>
+              <p id="card-artiste"></p>
+              <p id="card-date"></p>
+            </div>
+          </div>
+
+          <div class="carousel"></div>
+        </div>
       </div>
     </div>
 
@@ -55,12 +66,16 @@
 
       // Mettre à jour les éléments HTML avec les informations de la carte sélectionnée
       const titleElement = document.getElementById("card-title");
-      const imageElement = document.getElementById("card-image");
+      const briefElement = document.getElementById("card-brief");
       const descriptionElement = document.getElementById("card-description");
+      const artisteElement = document.getElementById("card-artiste");
+      const dateElement = document.getElementById("card-date");
 
       titleElement.textContent = cardData.nom;
-      imageElement.src = cardData.imageCardUrl;
+      briefElement.textContent = cardData.brief;
       descriptionElement.textContent = cardData.description;
+      artisteElement.textContent = cardData.artiste;
+      dateElement.textContent = cardData.année;
     </script>
   </body>
 </html>
