--- a/projets.html
+++ b/projets.html
@@ -6,6 +6,7 @@
     <title>Y Detailed figures</title>
     <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="stylesheet" href="./styles/base.css" />
+    <link rel="stylesheet" href="./styles/projets.css" />
     <link rel="stylesheet" href="./styles/component/gridCard.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -112,6 +113,21 @@
           </div>
         </div>
       </div>
+
+
+      <div class="modal-container">
+        <div class="modal">
+          <div class="modal-header">
+            <h2>Titre du projet</h2>
+            <button class="close-modal">X</button>
+          </div>
+          <div class="modal-body">
+            <p>Description du projet</p>
+            <img src="chemin/vers/image.jpg" alt="Image du projet">
+          </div>
+        </div>
+      </div>
+
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
