ajout boutton dl manuel

--- a/aPropos.html
+++ b/aPropos.html
@@ -2,8 +2,8 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="favicon.ico" />
-    <title>Ydetailed figures</title>
+    <link rel="icon" type="image/png" href="./assets/images/logo-ydf/logo_y_orange.png" />
+    <title>A propos</title>
     <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="stylesheet" href="./styles/base.css" />
     <link rel="stylesheet" href="./styles/aPropos.css" />
@@ -249,6 +249,28 @@
                   35 cm <br>
                   maximum 40H
                 </div>
+              </div>
+            </div>
+          </div>
+          <div class="manuel">
+            <div class="title">
+              <span>M</span>anuel <span>D</span>es <span>I</span>mprimantes <span>3</span>d
+            </div>
+            <div class="projet-presentation sub-faction-container">
+              <div class="presation-paragraph">
+                <p>
+                  Vous pouvez télecharger le manuel d'utilisation des imprimantes 3D. 
+                </p>
+              </div>
+              <div>
+                <button
+                  class="lien-details projet"
+                  href="http://www.alsacreations.com/astuce/lire/1603-html5-attribut-download.html"
+                  download="Article_HTML5_download.txt"
+                >
+                <a href="./assets/fichiers/manuelImprimantes.pdf"
+                download="manuel_imprimantes.pdf">Télécharger le manuel</a>
+                </button>
               </div>
             </div>
           </div>
