--- a/projets.html
+++ b/projets.html
@@ -2,8 +2,8 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="favicon.ico" />
-    <title>Y Detailed figures</title>
+    <link rel="icon" type="image/png" href="./assets/images/logo-ydf/logo_y_orange.png" />
+    <title>Projets</title>
     <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="stylesheet" href="./styles/base.css" />
     <link rel="stylesheet" href="./styles/component/gridCard.css" />
