--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <link rel="icon" type="image/png" href="./assets/images/logo-ydf/logo_y_orange.png" />
     <meta charset="utf-8" />
     <link rel="icon" href="favicon.ico" />
-    <title>Ydetailed figures</title>
+    <title>Accueil</title>
     <link rel="stylesheet" href="./styles/index.css" />
     <!-- <link rel="stylesheet" href="./styles/base.css"> -->
     <link
@@ -47,17 +48,17 @@
         class="carousel slide"
         data-bs-ride="carousel"
       >
-        <div class="carousel-inner">
+      <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="assets\images\caroussel\carousel-conception.jpg"
+              src="assets\images\caroussel\carousel-impression3.jpg"
               class="d-block w-100 carousel"
               alt="..."
             />
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item ">
             <img
-              src="assets\images\caroussel\carousel-modelisation.jpg"
+              src="assets\images\caroussel\carousel-conception.jpg"
               class="d-block w-100 carousel"
               alt="..."
             />
