--- a/card.html
+++ b/card.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Informations</title>
-    <link rel="stylesheet" href="./styles/base.css" />
     <link rel="stylesheet" href="./styles/card.css" />
-    <link rel="icon" href="./assets/images/logo-ydf/logo_orange_blanc.png" />
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="./styles/base.css" />
+    <link rel="stylesheet" href="./styles/component/gridCard.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,8 +26,31 @@
               >Accueil</a
             >
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="./projets.html">Projets</a>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Projets
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <a class="dropdown-item bg-cyan" href="./projets.html">Tous</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="./projets.html?annee=2021"
+                  >Année 2021</a
+                >
+              </li>
+              <li>
+                <a class="dropdown-item" href="./projets.html?annee=2022"
+                  >Année 2022</a
+                >
+              </li>
+            </ul>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./aPropos.html">A propos</a>
@@ -64,74 +88,16 @@
     </div>
 
     <script src="./assets/consts/constsFigurines.js"></script>
-    <script>
-      const params = new URLSearchParams(window.location.search);
-      const cardName = decodeURIComponent(params.get("name"));
-
-      // Trouver la carte correspondante dans la liste des données de projet
-      const cardData = Projet.find((item) => item.nom === cardName);
-
-      // Mettre à jour les éléments HTML avec les informations de la carte sélectionnée
-      const titleElement = document.getElementById("card-title");
-      const briefElement = document.getElementById("card-brief");
-      const descriptionElement = document.getElementById("card-description");
-      const artisteElement = document.getElementById("card-artiste");
-      const dateElement = document.getElementById("card-date");
-      titleElement.textContent = cardData.nom;
-      briefElement.textContent = cardData.brief;
-      descriptionElement.textContent = cardData.description;
-      artisteElement.textContent = cardData.artiste;
-      dateElement.textContent = cardData.année;
-
-      const imageElement = document.getElementById("card-image");
-      imageElement.innerHTML = `<img class="imgcard" src="${cardData.imageCardUrl}" width="70%">`;
-
-      const charaElement = document.getElementById("CharaDesign");
-      let imagesHtmlc = "";
-      if (cardData.charaUrl.length >= 1) {
-        for (let i = 0; i < cardData.charaUrl.length; i++) {
-          const img = new Image();
-          img.onload = () => {
-            imagesHtmlc += `<img src="${cardData.charaUrl[i]}" width="50%">`;
-            charaElement.innerHTML = imagesHtmlc;
-          };
-          img.src = cardData.charaUrl[i];
-        }
-      } else {
-        charaElement.innerHTML = "";
-      }
-
-      const inspirationElement = document.getElementById("Inspiration");
-      let imagesHtmla = "";
-      if (cardData.inspiUrl.length >= 1) {
-        for (let i = 0; i < cardData.inspiUrl.length; i++) {
-          const img = new Image();
-          img.onload = () => {
-            imagesHtmla += `<img src="${cardData.inspiUrl[i]}" width="50%">`;
-            inspirationElement.innerHTML = imagesHtmla;
-          };
-          img.src = cardData.inspiUrl[i];
-        }
-      } else {
-        inspirationElement.innerHTML = "";
-      }
-
-      const visualisationElement = document.getElementById("Visualisation");
-      let imagesHtmlb = "";
-      if (cardData.visualisationUrl.length >= 1) {
-        for (let i = 0; i < cardData.visualisationUrl.length; i++) {
-          const img = new Image();
-          img.onload = () => {
-            imagesHtmlb += `<img src="${cardData.visualisationUrl[i]}" width="50%">`;
-            visualisationElement.innerHTML = imagesHtmlb;
-          };
-          img.src = cardData.visualisationUrl[i];
-        }
-      } else {
-        visualisationElement.innerHTML = "";
-      }
-
-      // On ajoute la carte à la liste des cartes
-    </script>
+    <script src="fonctions/detailFigurine.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./assets/consts/constsFigurines.js"></script>
+    <script src="./assets/consts/constsEquipe.js"></script>
+    <script src="./fonctions/fonctions.js"></script>
+    <script src="./fonctions/projets.js"></script>
+    <script src="./fonctions/components.js"></script>
   </body>
 </html>
