add manuel et fix apropos

--- a/aPropos.html
+++ b/aPropos.html
@@ -82,7 +82,7 @@
             </div>
             <div class="lineColumn">
               <img
-                src="assets\images\photoProjets\Hyperion\hyperion_mode_3.png"
+                src="assets\images\photoProjets/Quesne/quesne_mode_2.png"
                 alt="maraiche_charadesign"
                 class="image-etape"
               />
@@ -110,7 +110,7 @@
             </div>
             <div class="lineColumn">
               <img
-                src="./assets/images/photoProjets/Maraiche/maraiche_charadesign.jpg"
+                src="./assets/images/photoProjets/Pia/pia_impr_1.JPG"
                 alt="maraiche_charadesign"
                 class="image-etape"
               />
