modal detail projet

--- a/projets.html
+++ b/projets.html
@@ -113,22 +113,46 @@
           </div>
         </div>
       </div>
-
-
-      <div class="modal-container">
-        <div class="modal">
-          <div class="modal-header">
-            <h2>Titre du projet</h2>
-            <button class="close-modal">X</button>
+      <div class="modal" id="modal-detail-projet" >
+        <!-- <div class="modal-container ">
+          <div class="modal description">
+            <div class="text">
+              <h1>Nom figurine</h1>
+              <h2>Description courte</h2>
+              <p>description</p>
+            </div>
           </div>
-          <div class="modal-body">
-            <p>Description du projet</p>
-            <img src="chemin/vers/image.jpg" alt="Image du projet">
+          <div class="modal close">
+            <p>X</p> 
           </div>
-        </div>
+          <div class="modal photo">
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="assets\images\photoProjets\Allarien\allarien_post.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets\images\photoProjets\Allarien\allarien_visu_1.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets\images\photoProjets\Allarien\allarien_visu_2.png" class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </div> -->
       </div>
-
     </div>
+    
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
