--- a/detailProjet.html
+++ b/detailProjet.html
@@ -70,18 +70,17 @@
               <p id="card-brief"></p>
               <h5 id="card-description"></h5>
               <div class="artiste">
-                <h3>Artiste</h3>
                 <p id="card-artiste"></p>
                 <p id="card-date"></p>
               </div>
             </div>
             <div id="card-image"></div>
           </div>
-          <h2>CharaDesign</h2>
+          <h2><span>C</span>hara<span>D</span>esign</h2>
           <div id="CharaDesign"></div>
-          <h2>Inspiration</h2>
+          <h2><span>I</span>nspiration</h2>
           <div id="Inspiration"></div>
-          <h2>Visualisation</h2>
+          <h2><span>V</span>isualisation</h2>
           <div id="Visualisation"></div>
         </div>
       </div>
