rename landing -> index

--- a/about.html
+++ b/about.html
@@ -166,7 +166,7 @@
     </div>
   </footer>
 
-  <script src="./script/landing.js"></script>
+  <script src="./script/about.js"></script>
   <script src="./script/common/footer.js"></script>
   <script src="./script/common/header.js"></script>
 </body>
