--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Accueil - Y Detailed Figures</title>
   <link rel="stylesheet" href="./styles/common/header.css">
   <link rel="stylesheet" href="./styles/common/footer.css">
-  <link rel="stylesheet" href="./styles/landing.css" />
+  <link rel="stylesheet" href="./styles/index.css" />
   <link rel="stylesheet" href="./styles/common/colors.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -49,7 +49,7 @@
         scolaire
         pour
         créer un concept art, le modéliser puis l'imprimer.</p>
-      <a class="btn-more" href="/aPropos.html">En savoir plus</a>
+      <a class="btn-more" href="/about.html">En savoir plus</a>
     </section>
     <section class="projects">
       <h3>Projets</h3>
@@ -92,7 +92,7 @@
     </div>
   </footer>
 
-  <script src="./script/landing.js"></script>
+  <script src="./script/index.js"></script>
   <script src="./script/common/header.js"></script>
   <script src="./script/common/footer.js"></script>
 </body>
