fix css vars duplicate && landing btn style on mobile

--- a/teams.html
+++ b/teams.html
@@ -21,15 +21,22 @@
         </span>
         <img class="logo" src="/assets/img/logo-ydf/logo_y_orange.png" />
         <ul class="tabs-list">
+            <li class="tab-item" id="landing">
+                <p>Accueil</p>
+            </li>
+            <div class="separator"></div>
             <li class="tab-item" id="projects">
                 <p>Projets</p>
             </li>
+            <div class="separator"></div>
             <li class="tab-item" id="teams">
                 <p>Équipes</p>
             </li>
+            <div class="separator"></div>
             <li class="tab-item" id="3D_models">
                 <p>Modèles 3D</p>
             </li>
+            <div class="separator"></div>
             <li class="tab-item" id="about">
                 <p>À propos</p>
             </li>
