--- a/index.html
+++ b/index.html
@@ -7,17 +7,54 @@
   <title>Accueil - Y Detailed Figures</title>
   <link rel="stylesheet" href="./styles/common/header.css">
   <link rel="stylesheet" href="./styles/common/footer.css">
-  <link rel="stylesheet" href="./styles/landing.css" />
+  <link rel="stylesheet" href="./styles/index.css" />
   <link rel="stylesheet" href="./styles/common/colors.css">
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <body>
+  <div class="mobile-background hidden"></div>
+  <div class="mobile-menu">
+    <img src="./assets/icons/chevron_left.svg" class="close-menu-icon" />
+
+    <img class="logo" src="/assets/img/logo-ydf/logo_y_orange.png" />
+    <ul class="tabs-list">
+      <li class="tab-item" id="landing">
+        <p>Accueil</p>
+      </li>
+      <div class="separator"></div>
+      <li class="tab-item" id="projects">
+        <p>Projets</p>
+      </li>
+      <div class="separator"></div>
+      <li class="tab-item" id="teams">
+        <p>Équipes</p>
+      </li>
+      <div class="separator"></div>
+      <li class="tab-item" id="models_3d">
+        <p>Modèles 3D</p>
+      </li>
+      <div class="separator"></div>
+      <li class="tab-item" id="about">
+        <p>À propos</p>
+      </li>
+    </ul>
+    <div class="mobile-media-link">
+      <a class="github_Logo" href="https://github.com/Gougouli69/YDetailedFigures" target="_blank">
+        <img src="./assets//img/logo-social-network/github-mark-white.svg" />
+      </a>
+      <a class="instagram_Logo" href="https://www.instagram.com/y_detailed_figures/" target="_blank">
+        <img src="./assets/img/logo-social-network/instagram.png" />
+      </a>
+      <a class="artStation_Logo" href="https://www.artstation.com/ydetailed_figures" target="_blank">
+        <img src="./assets/img/logo-social-network/artstation.png" />
+      </a>
+    </div>
+  </div>
   <header id="top">
     <div class="logo-wrapper">
       <img alt="Y-Detailed-Figures_Logo" src="./assets/img/logo-ydf/logo_annee2023.png" />
     </div>
+    <img class="mobile-menu-icon" src="./assets/icons/menu.svg" />
     <ul class="tabs-list">
       <li class="tab-item" id="projects">
         <p>Projets</p>
@@ -25,7 +62,7 @@
       <li class="tab-item" id="teams">
         <p>Équipes</p>
       </li>
-      <li class="tab-item" id="3D_models">
+      <li class="tab-item" id="models_3d">
         <p>Modèles 3D</p>
       </li>
       <li class="tab-item" id="about">
@@ -49,16 +86,16 @@
         scolaire
         pour
         créer un concept art, le modéliser puis l'imprimer.</p>
-      <a class="btn-more" href="/aPropos.html">En savoir plus</a>
+      <a class="btn-more" href="/about.html">En savoir plus</a>
     </section>
     <section class="projects">
       <h3>Projets</h3>
       <div class="projects-examples-list">
-        <img src="./assets/img/photoProjets/Allarien/allarien_post_2.jpg" alt="" />
-        <img src="./assets/img/photoProjets/Foxia/foxia_post.jpg" alt="" />
-        <img src="./assets/img/photoProjets/Maraiche/maraiche_post.jpg" alt="" />
-        <img src="./assets/img/photoProjets/Monke/monke_post.jpg" alt="" />
-        <img src="./assets/img/photoProjets/Oinc/oinc_post.png" alt="" />
+        <img src="./assets/img/projects/Allarien/allarien_post_2.jpg" alt="" />
+        <img src="./assets/img/projects/Foxia/foxia_post.jpg" alt="" />
+        <img src="./assets/img/projects/Maraiche/maraiche_post.jpg" alt="" />
+        <img src="./assets/img/projects/Monke/monke_post.jpg" alt="" />
+        <img src="./assets/img/projects/Oinc/oinc_post.png" alt="" />
         <span class="hover-background"></span>
         <a class="btn-projects" href="/projects.html">Voir tous les projets</a>
       </div>
@@ -68,13 +105,8 @@
       <p>Les étudiants proposent en open source l'accès au fichier 3D de leurs figurines.<br> Vous pourrez prochainement
         télécharger
         les modèles 3D afin de les modifer ou de les imprimer.</p>
-      <a class="btn-3d_models disabled" href="/3d_models">Voir les modèles téléchargeables</a>
+      <a class="btn-3d_models" href="/3d_models">Voir les modèles téléchargeables</a>
     </section>
-    <div class="arrow-to-top">
-      <span class="material-symbols-outlined">
-        arrow_upward
-      </span>
-    </div>
   </main>
 
   <footer>
@@ -92,7 +124,7 @@
     </div>
   </footer>
 
-  <script src="./script/landing.js"></script>
+  <script src="./script/index.js"></script>
   <script src="./script/common/header.js"></script>
   <script src="./script/common/footer.js"></script>
 </body>
