--- a/projects.html
+++ b/projects.html
@@ -9,15 +9,51 @@
   <link rel="stylesheet" href="./styles/common/footer.css">
   <link rel="stylesheet" href="./styles/projects.css" />
   <link rel="stylesheet" href="./styles/common/colors.css">
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <body>
+  <div class="mobile-background hidden"></div>
+  <div class="mobile-menu hidden">
+    <img src="./assets/icons/chevron_left.svg" class="close-menu-icon" />
+    <img class="logo" src="/assets/img/logo-ydf/logo_y_orange.png" />
+    <ul class="tabs-list">
+      <li class="tab-item" id="landing">
+        <p>Accueil</p>
+      </li>
+      <div class="separator"></div>
+      <li class="tab-item" id="projects">
+        <p>Projets</p>
+      </li>
+      <div class="separator"></div>
+      <li class="tab-item" id="teams">
+        <p>Équipes</p>
+      </li>
+      <div class="separator"></div>
+      <li class="tab-item" id="models_3d">
+        <p>Modèles 3D</p>
+      </li>
+      <div class="separator"></div>
+      <li class="tab-item" id="about">
+        <p>À propos</p>
+      </li>
+    </ul>
+    <div class="mobile-media-link">
+      <a class="github_Logo" href="https://github.com/Gougouli69/YDetailedFigures" target="_blank">
+        <img src="./assets//img/logo-social-network/github-mark-white.svg" />
+      </a>
+      <a class="instagram_Logo" href="https://www.instagram.com/y_detailed_figures/" target="_blank">
+        <img src="./assets/img/logo-social-network/instagram.png" />
+      </a>
+      <a class="artStation_Logo" href="https://www.artstation.com/ydetailed_figures" target="_blank">
+        <img src="./assets/img/logo-social-network/artstation.png" />
+      </a>
+    </div>
+  </div>
   <header id="top">
     <div class="logo-wrapper">
       <img alt="Y-Detailed-Figures_Logo" src="./assets/img/logo-ydf/logo_annee2023.png" />
     </div>
+    <img class="mobile-menu-icon" src="./assets/icons/menu.svg" />
     <ul class="tabs-list">
       <li class="tab-item" id="projects">
         <p>Projets</p>
@@ -25,8 +61,7 @@
       <li class="tab-item" id="teams">
         <p>Équipes</p>
       </li>
-      <li class="tab-item" id="3D_models">
-
+      <li class="tab-item" id="models_3d">
         <p>Modèles 3D</p>
       </li>
       <li class="tab-item" id="about">
@@ -40,17 +75,13 @@
       <h3>Projets</h3>
       <div class="search-wrapper">
         <div class="searchbar">
-          <input id="searchbar" name="search project" placeholder="Recherchez par projet ou membre" />
+          <input id="searchbar" name="search project" placeholder="Recherchez par projet ou artiste" />
         </div>
         <div class="filter-wrapper"></div>
       </div>
       <div class="project-wrapper"></div>
-    </section>
-    <div class="arrow-to-top">
-      <span class="material-symbols-outlined">
-        arrow_upward
-      </span>
-    </div>
+      <div class="project-lightbox hidden"></div>
+      <div class="project-lightbox-background hidden"></div>
   </main>
 
   <footer>
