add last projects && imgs

--- a/3d_models.html
+++ b/3d_models.html
@@ -88,7 +88,8 @@
             </div>
             <canvas id="canvas-caroussel"></canvas>
         </section>
-        <section id="models_3d_list"></section>
+        <section id="models_3d_list">Aucun modèles 3D téléchargeables gratuitement. Veuillez contacter les artistes.
+        </section>
     </main>
 
     <footer>
